--- a/src/main/webapp/pharmacy/list_amps.xhtml
+++ b/src/main/webapp/pharmacy/list_amps.xhtml
@@ -12,31 +12,31 @@
 
             <ui:define name="subcontent">
                 <h:form>
-                    <p:panel header="Pharmaceutical Item List" >
+                    <p:panel header="Pharmacy Item Assign Codes" >
+                        <p:autoComplete completeMethod="#{pharmaceuticalItemCategoryController.completeCategory}" var="dept" 
+                                        itemLabel="#{dept.name}" itemValue="#{dept}" placeholder="Category"
+                                        forceSelection="true" value="#{dataAdministrationController.itemCategory}" >
+                        </p:autoComplete>
                         <p:commandButton ajax="false" value="Excel">
                             <p:dataExporter  type="xls" target="tblItem" fileName="item_list"  />
                         </p:commandButton>
-                        <p:commandButton ajax="false" value="Refresh"
-                                         action="#{ampController.createItemList()}"/>
+                        <p:commandButton ajax="false" value="Update Code"
+                                         action="#{dataAdministrationController.createCodeSelectedCategory()}"/>
+                        <!--                        <p:commandButton ajax="false" value="Remove Code"
+                                                                 action="#{dataAdministrationController.createremoveAllCodes}"/>-->
 
 
                         <p:panel id="paItems">
 
-                            <p:dataTable id="tblItem" value="#{ampController.items}" var="i"
+                            <p:dataTable id="tblItem" value="#{dataAdministrationController.items}" var="i"
                                          rowIndexVar="n"
-                                         rowKey="#{i.id}" selection="#{ampController.listToRemove}"
+                                         rowKey="#{i.id}" 
                                          rows="10"
                                          paginator="true"
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                         rowsPerPageTemplate="20,50,100,1000,5000"
+                                         rowsPerPageTemplate="20,50,100,1000"
                                          >
-                                <p:column id="colSelect"  >
-                                    <f:facet name="header" >
-                                        <h:outputText value="No" />
-                                    </f:facet>
-                                    <p:outputLabel value="#{n+1}"></p:outputLabel>
-                                </p:column>
-                                <p:column headerText="Category" 
+                                <p:column headerText="Dosage Form" 
                                           sortBy="#{i.category.name}" 
                                           filterBy="#{i.category.name}" filterMatchMode="contains">
                                     <f:facet name="header" >
@@ -60,18 +60,32 @@
                                     </f:facet>
                                     <p:outputLabel value="#{i.code}"></p:outputLabel>
                                 </p:column>
-                                <p:column headerText="Generic" 
+                                <p:column headerText="Barcode" 
+                                          sortBy="#{i.barcode}"
+                                          filterBy="#{i.barcode}" filterMatchMode="contains">
+                                    <f:facet name="header" >
+                                        <h:outputText value="Barcode" />
+                                    </f:facet>
+                                    <p:outputLabel value="#{i.barcode}"></p:outputLabel>
+                                </p:column>
+                                <p:column headerText="VMP" 
                                           sortBy="#{i.vmp.name}"
                                           filterBy="#{i.vmp.name}" filterMatchMode="contains">
                                     <f:facet name="header" >
-                                        <h:outputText value="Generic" />
+                                        <h:outputText value="VMP" />
+                                    </f:facet>
+                                    <p:outputLabel value="#{i.vmp.name}"></p:outputLabel>
+                                </p:column>
+                                <p:column headerText="VTM" 
+                                          sortBy="#{i.vmp.vtm.name}"
+                                          filterBy="#{i.vmp.vtm.name}" filterMatchMode="contains">
+                                    <f:facet name="header" >
+                                        <h:outputText value="VTM" />
                                     </f:facet>
                                     <p:outputLabel value="#{i.vmp.name}"></p:outputLabel>
                                 </p:column>
                             </p:dataTable>
                         </p:panel>
-
-
                     </p:panel>
                 </h:form>
 
