--- a/src/main/webapp/dataAdmin/list_amps.xhtml
+++ b/src/main/webapp/dataAdmin/list_amps.xhtml
@@ -36,13 +36,7 @@
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                          rowsPerPageTemplate="20,50,100,1000"
                                          >
-                                <p:column id="colSelect"  >
-                                    <f:facet name="header" >
-                                        <h:outputText value="No" />
-                                    </f:facet>
-                                    <p:outputLabel value="#{n+1}"></p:outputLabel>
-                                </p:column>
-                                <p:column headerText="Category" 
+                                <p:column headerText="Dosage Form" 
                                           sortBy="#{i.category.name}" 
                                           filterBy="#{i.category.name}" filterMatchMode="contains">
                                     <f:facet name="header" >
@@ -66,25 +60,35 @@
                                     </f:facet>
                                     <p:outputLabel value="#{i.code}"></p:outputLabel>
                                 </p:column>
-                                <p:column headerText="Generic" 
+                                <p:column headerText="Barcode" 
+                                          sortBy="#{i.barcode}"
+                                          filterBy="#{i.barcode}" filterMatchMode="contains">
+                                    <f:facet name="header" >
+                                        <h:outputText value="Barcode" />
+                                    </f:facet>
+                                    <p:outputLabel value="#{i.barcode}"></p:outputLabel>
+                                </p:column>
+                                <p:column headerText="VMP" 
                                           sortBy="#{i.vmp.name}"
                                           filterBy="#{i.vmp.name}" filterMatchMode="contains">
                                     <f:facet name="header" >
-                                        <h:outputText value="Generic" />
+                                        <h:outputText value="VMP" />
+                                    </f:facet>
+                                    <p:outputLabel value="#{i.vmp.name}"></p:outputLabel>
+                                </p:column>
+                                 <p:column headerText="VTM" 
+                                           sortBy="#{i.vmp.vtm.name}"
+                                          filterBy="#{i.vmp.vtm.name}" filterMatchMode="contains">
+                                    <f:facet name="header" >
+                                        <h:outputText value="VTM" />
                                     </f:facet>
                                     <p:outputLabel value="#{i.vmp.name}"></p:outputLabel>
                                 </p:column>
                             </p:dataTable>
                         </p:panel>
-
-
                     </p:panel>
                 </h:form>
-
-
             </ui:define>
-
-
         </ui:composition>
 
     </h:body>
