Closes #787 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/admin/index.xhtml
+++ b/src/main/webapp/emr/admin/index.xhtml
@@ -40,6 +40,8 @@
                                             <p:commandButton class="w-100" ajax="false" value="Upload ATMs" action="#{dataUploadBean.toUploadAtms()}"  ></p:commandButton>
                                             <p:commandButton class="w-100" ajax="false" value="Upload VMPs" action="#{dataUploadBean.toUploadVmps()}"  ></p:commandButton>
                                             <p:commandButton class="w-100" ajax="false" value="Upload AMPs" action="#{dataUploadBean.toUploadAmps()}"  ></p:commandButton>
+                                            <p:commandButton class="w-100" ajax="false" value="Upload AMPs (Minimal)" action="#{dataUploadBean.toUploadAmpsMin()}"  ></p:commandButton>
+
                                         </div>
                                     </p:tab>
                                     <p:tab title="Upload Data">
