--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -15,7 +15,7 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <h:form >
-            <p:menubar  >
+            <p:menubar  styleClass="bg-light text-dark" >
                 <p:menuitem  ajax="false"
                              action="/home" 
                              icon="pi pi-home"
