--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
@@ -63,7 +63,7 @@
                                                     <p:autoComplete accesskey="i"    id="acStock" 
                                                                     value="#{pharmacySaleController.stock}" 
                                                                     converter="stockCon" 
-                                                                    completeMethod="#{pharmacySaleController.completeAvailableStocksFromNameOrGeneric}" 
+                                                                    completeMethod="#{pharmacySaleController.completeAvailableStocks}" 
                                                                     var="i" itemLabel="#{i.itemBatch.item.name}" itemValue="#{i}" maxResults="30"
                                                                     >
                                                         <p:column headerText="Item">
