--- a/src/main/webapp/cashTransaction/set_drawer_to_other_user.xhtml
+++ b/src/main/webapp/cashTransaction/set_drawer_to_other_user.xhtml
@@ -20,7 +20,7 @@
                                     value="#{sessionController.webUser}" ></p:autoComplete>
                     <h:outputLabel value="Current Drawer"/>
                     <p:autoComplete value="#{sessionController.webUser.drawer}"
-                                    forceSelection="true" converter="drawerCon"
+                                    forceSelection="true" 
                                     completeMethod="#{drawerController.completeDrawer}" var="s"
                                     itemLabel="#{s.name}" itemValue="#{s}" ></p:autoComplete>
 
