--- a/src/main/webapp/collecting_centre/bill.xhtml
+++ b/src/main/webapp/collecting_centre/bill.xhtml
@@ -124,9 +124,9 @@
                                                         <td> : </td>
                                                         <td>
                                                             <p:inputText  id="txtNewPtPhone" placeholder="Phone Number"
-                                                                         autocomplete="off" maxlength="11" 
-                                                                         value="#{collectingCentreBillController.newPatient.person.phone}"
-                                                                         style="width: 100px;">
+                                                                          autocomplete="off" maxlength="11" 
+                                                                          value="#{collectingCentreBillController.newPatient.person.phone}"
+                                                                          style="width: 100px;">
                                                             </p:inputText>
                                                         </td>
                                                         <td>
@@ -155,36 +155,37 @@
 
                                                 <h:panelGrid columns="1" >
 
-                                                    <p:autoComplete styleClass="mediuminput" converter="patientConverter"
-                                                                    disabled="#{collectingCentreBillController.fromOpdEncounter}"
-                                                                    widgetVar="aPt" id="acPt" forceSelection="true" 
-                                                                    value="#{collectingCentreBillController.searchedPatient}" 
-                                                                    completeMethod="#{patientController.completePatientByNameOrCode}" 
-                                                                    var="apt" itemLabel="#{apt.person.name}" 
-                                                                    itemValue="#{apt}" size="30"  style="width: 400px;"
-                                                                    minQueryLength="4">
+                                                    <p:autoComplete 
+                                                        styleClass="mediuminput" 
+                                                        disabled="#{collectingCentreBillController.fromOpdEncounter}"
+                                                        widgetVar="aPt" id="acPt" forceSelection="true" 
+                                                        value="#{collectingCentreBillController.searchedPatient}" 
+                                                        completeMethod="#{patientController.completePatientByNameOrCode}" 
+                                                        var="apt" itemLabel="#{apt.person.name}" 
+                                                        itemValue="#{apt}" size="30"  style="width: 400px;"
+                                                        minQueryLength="4">
 
 
                                                         <p:column headerText="Name">
-                                                            <h:outputLabel value="#{apt.person.nameWithTitle}" />
+                                                            <h:outputText value="#{apt.person.nameWithTitle}" />
                                                         </p:column>
 
                                                         <p:column headerText="Age">
-                                                            <h:outputLabel value="#{apt.age}" />
+                                                            <h:outputText value="#{apt.age}" />
                                                         </p:column>
                                                         <p:column headerText="Code">
-                                                            <h:outputLabel value="#{apt.code}" />
+                                                            <h:outputText value="#{apt.code}" />
                                                         </p:column>
                                                         <p:column headerText="Sex">
-                                                            <h:outputLabel value="#{apt.person.sex}" />
+                                                            <h:outputText value="#{apt.person.sex}" />
                                                         </p:column>
                                                         <p:column headerText="Address">
-                                                            <h:outputLabel value="#{apt.person.address}" />
+                                                            <h:outputText value="#{apt.person.address}" />
                                                         </p:column>
                                                         <p:column headerText="Date of Birth">
-                                                            <h:outputLabel value="#{apt.person.dob}" >
+                                                            <h:outputText value="#{apt.person.dob}" >
                                                                 <f:convertDateTime pattern="dd MMMM yyyy"/>
-                                                            </h:outputLabel>
+                                                            </h:outputText>
                                                         </p:column>
                                                         <f:ajax event="itemSelect" execute="@this" 
                                                                 render="panSearch :#{p:resolveFirstComponentWithId('tblBillItem',view).clientId} :#{p:resolveFirstComponentWithId('pBillDetails',view).clientId}" 
