--- a/src/main/webapp/resources/patient/searchPatient.xhtml
+++ b/src/main/webapp/resources/patient/searchPatient.xhtml
@@ -20,7 +20,7 @@
                 <f:ajax execute="@this" render="acPt" />
             </p:selectBooleanCheckbox>
             <p:autoComplete widgetVar="aPt" id="acPt" forceSelection="true" 
-                            value="#{cc.attrs.patient}" converter="patientConverter"
+                            value="#{cc.attrs.patient}" 
                             completeMethod="#{patientController.completePatientByNameOrCode}" 
                             var="apt" itemLabel="#{apt.person.nameWithTitle}" 
                             itemValue="#{apt}" size="30"  class="w-100" >
