--- a/src/main/webapp/emr/opd_visit.xhtml
+++ b/src/main/webapp/emr/opd_visit.xhtml
@@ -231,39 +231,42 @@
                                         <p:outputLabel value="Patient Details" ></p:outputLabel>
                                     </div>
                                     <div class="card-body" >
-
-
-
-                                        <h:outputText value="Name" class="form-label" ></h:outputText>
+                                        <h:outputText value="Name : "  ></h:outputText>
                                         <h:outputText id="txtPersonName" 
-                                                     class="form-control"
-                                                     value="#{patientEncounterController.current.patient.person.name}">
+                                                      value="#{patientEncounterController.current.patient.person.name}">
                                         </h:outputText>
-                                        <h:outputText value="Address"  class="form-label"></h:outputLabel>
-                                        <h:outputText >
-                                            <p:ajax process="@this" ></p:ajax>
-                                        </h:outputText>
-
-                                        <h:outputText value="Age"  class="form-label"></h:outputLabel>
+                                        <br/>
                                         <h:outputText 
-                                            class="form-control"
+                                            value="Address : " ></h:outputText>
+                                        <h:outputText 
+                                            value="#{patientEncounterController.current.patient.person.address}">
+                                        </h:outputText>
+                                        <br/>
+                                        <h:outputText 
+                                            value="Age: " ></h:outputText>
+                                        <h:outputText 
+
                                             value="#{patientEncounterController.current.patient.age}" >
                                         </h:outputText>
+                                        <br/>
+                                        <h:outputText 
+                                            value="Sex : " ></h:outputText>
+                                        <h:outputText 
 
-                                        <h:outputLabel value="Sex"  class="form-label"></h:outputLabel>
-                                        <h:outputLabel 
-                                            class="form-control"
                                             value="#{patientEncounterController.current.patient.person.sex}" >
-                                        </h:outputLabel>
-                                        <h:outputLabel value="Personal Hx"  class="form-label"></h:outputLabel>
-                                        <p:inputTextarea rows="7" class="form-control"
-                                                         value="#{patientEncounterController.current.patient.comments}" >
-                                            <p:ajax process="@this" ></p:ajax>
-                                        </p:inputTextarea>
+                                        </h:outputText>
+                                        <br/>
+                                        <h:outputText 
+                                            value="Personal Hx : "  ></h:outputText>
+                                        <h:outputText 
+                                            value="#{patientEncounterController.current.patient.comments}" >
+                                        </h:outputText>
+                                        <br/>
 
-
-                                        <p:commandButton ajax="false" value="Update Patient" action="#{patientEncounterController.updatePerson()}"
-                                                         process="panelPt" update="panelPt" ></p:commandButton>
+                                        <p:commandButton 
+                                            ajax="false" value="To Patient Profile"
+                                            action="#{patientEncounterController.updatePerson()}"
+                                            process="panelPt" update="panelPt" ></p:commandButton>
 
 
 
