--- a/src/main/webapp/analytics/index.xhtml
+++ b/src/main/webapp/analytics/index.xhtml
@@ -14,7 +14,8 @@
                         <div class="row" >
                             <div class="col-md-3" >
                                 <h:form>
-                                <p:accordionPanel >
+                                    <p:accordionPanel activeIndex="#{searchController.manageListIndex}">
+                                        <p:ajax process="@this"></p:ajax>
                                     <p:tab title="Lists">
                                         <div class="d-grid gap-2">
                                             <p:commandButton ajax="false" value="All Bills" action="/reportInstitution/all_bills"
@@ -26,13 +27,13 @@
                                     </p:tab>
 
                                     <p:tab title="OPD Reports">
-                                        <h:panelGrid columns="1" >
+                                        <div class="d-grid gap-2">
                                             <p:commandButton ajax="false" value="OPD Bill List" action="#{searchController.navigateToOpdBillList()}" 
                                                              styleClass="linkButton"></p:commandButton>
                                             <p:commandButton ajax="false" value="Cancelled Bill List" action="#" styleClass="linkButton"></p:commandButton>
                                             <p:commandButton ajax="false" value="Returned Bill List" action="#" styleClass="linkButton"></p:commandButton>
 
-                                        </h:panelGrid>
+                                        </div>
                                     </p:tab>
                                     <p:tab title="Lab Reports" disabled="true">
                                         <h:panelGrid columns="1" >
