--- a/src/main/webapp/analytics/index.xhtml
+++ b/src/main/webapp/analytics/index.xhtml
@@ -18,7 +18,7 @@
                                         <p:ajax process="@this"></p:ajax>
                                     <p:tab title="Lists">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton ajax="false" value="All Bills" action="/reportInstitution/all_bills"
+                                            <p:commandButton ajax="false" value="All Bills" action="/analytics/all_bills"
                                                              class="w-100"></p:commandButton>
                                             <p:commandButton ajax="false" value="List of Bills of Other Institutions"
                                                              action="#{searchController.navigateToListOtherInstitutionBills()}"
@@ -36,12 +36,12 @@
                                         </div>
                                     </p:tab>
                                     <p:tab title="Lab Reports" disabled="true">
-                                        <h:panelGrid columns="1" >
+                                        <div class="d-grid gap-2">
                                             <p:commandButton ajax="false" value="Bill List" action="#"  styleClass="linkButton"></p:commandButton>
                                             <p:commandButton ajax="false" value="Test List" action="report_list_lab_tests"  styleClass="linkButton"></p:commandButton>
                                             <p:commandButton ajax="false" value="Referral Bill List" action="#"  styleClass="linkButton"></p:commandButton>
                                             <p:commandButton ajax="false" value="Referral Test List" action="#"  styleClass="linkButton"></p:commandButton>
-                                        </h:panelGrid>
+                                        </div>
                                     </p:tab>
                                 </p:accordionPanel>
                                 </h:form>
