--- a/src/main/webapp/analytics/other_institution_bills.xhtml
+++ b/src/main/webapp/analytics/other_institution_bills.xhtml
@@ -6,7 +6,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
-        <ui:composition template="./report_list.xhtml">
+        <ui:composition template="/analytics/index.xhtml">
             <ui:define name="report">
                 <p:panel>
                     <f:facet name="header" >
