Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/bill_cancel.xhtml
+++ b/src/main/webapp/bill_cancel.xhtml
@@ -82,7 +82,7 @@
                     <h:panelGroup rendered="#{billSearch.printPreview}" >
                         <p:panel rendered="#{billSearch.bill.billType ne 'CollectingCentreBill'}">
                             <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePaper'}" >
-                                <h:panelGroup id="gpBillPreview" rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq false}">
+                                <h:panelGroup id="gpBillPreview">
                                     <div class="nonPrintBlock">
                                         <p:commandButton value="Print" ajax="false" action="#"  >
                                             <p:printer target="gpBillPreview" ></p:printer>
@@ -94,7 +94,7 @@
 
                                 </h:panelGroup>
 
-                                <h:panelGroup id="gpBillPreviewCoop" rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq true}">
+                                <h:panelGroup id="gpBillPreviewCoop" >
                                     <div class="nonPrintBlock">
                                         <p:commandButton value="Print" ajax="false" action="#"  >
                                             <p:printer target="gpBillPreviewCoop" ></p:printer>
@@ -109,9 +109,7 @@
 
                         <p:panel rendered="#{billSearch.bill.billType eq 'CollectingCentreBill'}">
                             <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePaper'}" >
-                                <h:panelGroup id="gpBillPreviewCC" rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq false
-                                                                               and sessionController.loggedPreference.applicationInstitution eq 'Ruhuna'
-                                                                               and sessionController.loggedPreference.fiveFivePaperWithHeadings eq false}">
+                                <h:panelGroup id="gpBillPreviewCC">
                                     <div class="nonPrintBlock">
                                         <p:commandButton value="Print" ajax="false" action="#"  >
                                             <p:printer target="gpBillPreviewCC" ></p:printer>
@@ -124,9 +122,7 @@
                                                             </h:panelGroup>-->
 
                                 </h:panelGroup>
-                                <h:panelGroup id="gpBillPreviewCC1" rendered="#{sessionController.loggedPreference.printLabelForOPdBill eq false
-                                                                               and sessionController.loggedPreference.applicationInstitution eq 'Ruhuna'
-                                                                               and sessionController.loggedPreference.fiveFivePaperWithHeadings eq false}">
+                                <h:panelGroup id="gpBillPreviewCC1" >
                                     <div class="nonPrintBlock">
                                         <p:commandButton value="Print" ajax="false" action="#"  >
                                             <p:printer target="gpBillPreviewCC1" ></p:printer>
