--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -369,7 +369,7 @@
 
             <div class="footer" style="text-align: center;">
                 <br/>
-                <h:outputLabel value="#{sessionController.userPreference.pharmacyBillFooter}"/>
+<!--                <h:outputLabel value="#{sessionController.userPreference.pharmacyBillFooter}"/>-->
                 <br/>
             </div>
 
